<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wavyleaf</string>
    <string name="version">1.06g1</string>
    <string name="website">http://skappsrv.towson.edu/wavyleaf/website/</string>
    <string name="email">wavyleaf@towson.edu</string>
    <string-array name="email_array"><item>wavyleaf@towson.edu</item></string-array>
    <string name="towson_university">Towson University</string>
    
    <string name="layout_about_authors">Eric Forbes / Mohsin Majid\n Jon Smoley / Jesse Day</string>
    <string name="layout_about_supportedby">This project is partially supported by NSF DUE#1140781 and the School of Emerging Technologies at Towson University</string>
    <string name="layout_about_developers">Developers</string>
    <string name="layout_about_specialthanks">Special Thanks</string>
    <string name="layout_about_thanksto">Dr. Kaza, Dr. Dehlinger, &amp; Dr. Beauchamp</string>
    
    <string name="layout_main_new">New Sighting</string>
    <string name="layout_main_trip">Start Trip</string>
    <string name="layout_main_endtrip">End Trip</string>
    <string name="layout_main_uploadsightings">Upload Sightings</string>
    
    <string name="layout_numrecorded">Your Sightings/Trips</string>
    <string name="layout_tripinterval">Reminder Interval</string>
    <string name="layout_novalue">- - - </string>
    
    <string name="layout_help_how_first">This app allows you to record both presence and absence points. Data on where the grass is growing is important for determining its distribution and predicting the areas where it is likely to grow best. Absence points are also very important. If we are positive the grass was absent at a location one year and it is found there the next year, we have valuable information on how fast the grass is spreading.</string>
    <string name="layout_help_how_second">This app allows you to take one point or a series of points. To take single point, press the "New Sighting" button. Look around you and determine how much of the area you see that is available for plant growth (mentally delete areas like parking lots, trails or rivers) is coved with wavyleaf basketgrass. Then press the button for the range that incudes your estimate. If you don\'t see any wavyleaf (hurray!), hit the button for 0%. If you are able to estimate the extent of the area infested, fill this out as well but it is not required. You can also submit a photo with your point if you wish (this functionality is coming soon!).</string>
    <string name="layout_help_how_third">To take a series of points, press the "Start Trip" button and choose how often you want to take a point. You phone will alert you at the correct time. When you are finished recording points, press "Stop Trip". You can also use the "New Sighting" button at any point in your trip to record extra points.</string>
    
    <string name="layout_help_identify_first">Wavy leaves - Leaf blades of wavyleaf basketgrass have undulating ripples.</string>
    <string name="layout_help_identify_second">Fuzzy stems - stems of wavyleaf basketgrass are covered with short, fuzzy hairs. Japanese stiltgrass (Microstegium vimineum), which looks somewhat similar to wavyleaf basketgrass, has smooth stems. Also, the leaves of Japanese stiltgrass are flat, not wavy.</string>
    <string name="layout_help_identify_third">No silver mid-vein - Japanese stiltgrass has a vein running down the middle if its leaf that looks silvery or shiny in the right light. </string>
    <string name="layout_help_identify_fourth">Non-clasping leaves - two other look-alikes, deer tongue grass (Panicum clandestinum) and hairy jointgrass (ArthraxonÃ‚Â hispidus), also have fuzzy stems and somewhat wavy leaves, but the leaf bases of these grasses wrap around the stem. The leaf bases of wavyleaf basketgrass cup the stem but don\'t encircle it. </string>
    
    <string name="layout_help_faq_first_question">What sort of time commitment is required to participate in this project?</string>
    <string name="layout_help_faq_first_answer">You can contribute as little or as much time as you wish. We\'ve intended for people to use this app while hiking, so even recording points along your favorite trail is valuable data.</string>
    <string name="layout_help_faq_second_question">How do I know if someone else has already mapped a particular trail?</string>
    <string name="layout_help_faq_second_answer">In the future we\'ll have a map view where you can see the points everyone else has submitted. Mapping a trail multiple times can actually provide very important data: it allows us to determine if the grass has spread along the trail; it allows us to measure the variability in people\'s estimates of cover; and it gives us a better idea of which areas are more heavily used. Areas where several different volunteers have submitted points may be good candidates for interpretative signage.</string>
    <string name="layout_help_faq_third_question">Do I need to submit a picture with every point?</string>
    <string name="layout_help_faq_third_answer">No, we do not need a picture with every point. We would like you to submit a picture in any instance where you: 1) are unsure of your identification; 2) see any unusual coloration, growth or insect/herbivory damage; or 3) see the grass in flower or in seed for the first time in a season.</string>
    <string name="layout_help_faq_fourth_question">What will you do with the data we collect?</string>
    <string name="layout_help_faq_fourth_answer">We have preliminary data that suggest that wavyleaf basketgrass poses a serious threat to the diversity and function of forest ecosystems, but we need funding to carry out larger and longer-term studies. We also need funding to eradicate this species in areas where it has overtaken most native forest vegetation. A better understating of the distribution of this species and how fast it is spreading will help bring this species to the attention of lawmakers, policy writers and funding agencies.</string>
    
    <string name="layout_login_createaccount">Create Account</string>
    <string name="layout_login_details">Enter acount details</string>
    <string name="layout_login_name">Name</string>
    <string name="layout_login_birthyear">Birth Year</string>
    <string name="layout_login_email">Email</string>
    
    <string name="layout_login_education">Education</string>
    <string name="layout_login_education_question">How much education do you have?</string>
    <string name="layout_login_outdoorexperience">Outdoors Experience</string>
    <string name="layout_login_outdoorexperience_question">How often do you hike?</string>
    <string name="layout_login_confidence">Confidence</string>
    <string name="layout_login_confidence_question_general">Confidence in general plant Identification?</string>
    <string name="layout_login_confidence_question_wavyleaf">Confidence in wavyleaf Identification?</string>
    
    <string name="layout_sighting_picturenotes">PICTURE/NOTES</string>
    <string name="layout_sighting_percentage">PERCENT INFESTED</string>
    <string name="layout_sighting_area">AREA INFESTED</string>
    <string name="layout_sighting_coordinates">COORDINATES</string>
    <string name="layout_sighting_camera">Choose a picture</string>
    <string name="layout_sighting_confirmcoordinates">Coordinates are correct</string>
    <string name="layout_sighting_treatment">TREATMENT</string>
    <string name="layout_sighting_help_percent">How much of the area seen is covered by wavyleaf?</string>
    <string name="layout_sighting_help_treatment">What treatment, if any, was conducted?</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    
    <string name="layout_sightingmapview_reset">Reset</string>
    <string name="layout_sightingmapview_done">Done</string>
    
    <string name="layout_trip_save">Save</string>
    <string name="layout_trip_yoursightings">Your Sightings</string>
    <string name="finish_trip">Finish Trip</string>
    
    <string name="gps_is_disabled">GPS is disabled</string>
    <string name="show_location_settings">Show Location Settings</string>
    
    <string name="toggle_zero_reg">0%</string>
    <string name="toggle_zero_bold"><b>0%</b></string>
    <string name="toggle_one_reg">1-10%</string>
    <string name="toggle_one_bold"><b>1-10%</b></string>
    <string name="toggle_ten_reg">10-25%</string>
    <string name="toggle_ten_bold"><b>10-25%</b></string>
    <string name="toggle_twentyfive_reg">25-50%</string>
    <string name="toggle_twentyfive_bold"><b>25-50%</b></string>
    <string name="toggle_fifty_reg">50-75%</string>
    <string name="toggle_fifty_bold"><b>50-75%</b></string>
    <string name="toggle_seventyfive_reg">75-100%</string>
    <string name="toggle_seventyfive_bold"><b>75-100%</b></string>
    
    <string name="preference_noiseandvisual">NOISE / VISUAL</string>
    <string name="preference_other">OTHER</string>
    <string name="preference_sightings">SIGHTINGS</string>
    <string name="preference_user">USER</string>
    
    <string name="preference_user_name">Name</string>
    <string name="preference_user_birthyear">Birth Year</string>
    <string name="preference_sightings_single">Single points submitted</string>
    <string name="preference_sightings_trip">Trip points submitted</string>
    <string name="preference_noiseandvisual_vibrate">Vibrate during trips</string>
    <string name="preference_noiseandvisual_playsound">Play sound during trips</string>
    <string name="preference_noiseandvisual_splash">Splash screen</string>
    <string name="preference_other_version">Version</string>
    <string name="preference_other_rate">Rate this application</string>
    <string name="preference_other_googleplaystore">Google Play Store</string>

</resources>