<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/mapview_fullscreen"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:text="@string/latitude"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/longitude"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#669900" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <Button
            android:id="@+id/btnResetCoord"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/abs__list_selector_holo_light"
            android:drawableLeft="@drawable/ic_reset"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:text="@string/layout_sightingmapview_reset"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#669900" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/abs__list_selector_holo_light"
            android:text="@string/layout_sightingmapview_done"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/holo_darkgreen" />
    </LinearLayout>

</LinearLayout>